# FACET

./: CREDITS.md  README.md
CODE/: Cargo.toml  build.bat  clean.bat  make.bat
CODE/TEST/: test.bat  test_obj.bat  test_xyz.bat
CODE/TEST/XYZ/: colored_cube.xyz  colored_dodecahedron.xyz  colored_square.xyz  wireframe_bunny.xyz  wireframe_bunny_2.xyz  wireframe_cube.xyz  wireframe_dodecahedron.xyz  wireframe_square.xyz
CODE/src/: load.rs  main.rs
DOCUMENT/: style_guide.md
